Optimization And Fixes